--- a/scss/style.css
+++ b/scss/style.css
@@ -655,7 +655,7 @@ img {
     border-right-color: #ADE792;
   }
   60%, 80% {
-    width: 30%;
+    width: 80%;
   }
 }
 
@@ -670,7 +670,7 @@ img {
     border-right-color: #ADE792;
   }
   60%, 80% {
-    width: 30%;
+    width: 80%;
   }
 }
 .about__img {
@@ -922,5 +922,10 @@ img {
   }
   .Projects__container .project {
     width: 30vw;
+  }
+}
+@media screen and (min-width: 0px) and (max-width: 480px) {
+  .home__img {
+    width: 80vw;
   }
 }/*# sourceMappingURL=style.css.map */
